# miniq

./: Pipfile  README.md  foo  miniq-server  miniq.py  qdel  qstat  qsub  setup.cfg
