[metadata]
name = miniq
version = 0.1
description = Lightweight Mock Batch Queue

author = Misha Salim
license = BSD 3-Clause License
keywords = workflows, hpc, testing, queues, schedulers, asyncio, websocket
classifiers = 
    Programming Language :: Python :: 3.7

[options]
packages= find:
install_requires = 
    websockets
python_requires = >=3.7
scripts = 
    miniq-server
    miniq.py
    qsub
    qstat
    qdel
